--- a/app/src/main/res/layout/activity_fee.xml
+++ b/app/src/main/res/layout/activity_fee.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         tools:context=".FeeActivity" android:id="@+id/constraintLayout">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="100dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
@@ -16,7 +16,7 @@
             android:layout_marginTop="5dp" app:layout_constraintTop_toTopOf="parent"
             app:cardBackgroundColor="@android:color/holo_green_dark" app:cardElevation="5dp"
             android:id="@+id/cardView3" app:cardCornerRadius="17dp">
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -37,16 +37,16 @@
                     android:layout_marginEnd="12dp" android:layout_marginBottom="12dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textStyle="bold"
                     android:textColor="@color/textPrimaryColor"/>
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@+id/cardView3" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="5dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
             app:cardBackgroundColor="@android:color/holo_red_dark" app:cardElevation="5dp" app:cardCornerRadius="17dp">
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -66,8 +66,8 @@
                     android:layout_marginEnd="12dp" android:layout_marginBottom="12dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textStyle="bold"
                     android:textColor="@color/textPrimaryColor"/>
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
     <TextView
             android:text="I know I'm not good at UI"
             android:layout_width="0dp"
@@ -76,4 +76,4 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:textAlignment="center" android:textColor="@color/textPrimaryLighterColor"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
