--- a/app/src/main/res/layout/attendance_row.xml
+++ b/app/src/main/res/layout/attendance_row.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:background="@color/backgroundColor"
                                              android:layout_height="110dp">
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
@@ -14,7 +14,7 @@
             app:layout_constraintTop_toTopOf="parent" app:cardBackgroundColor="@color/cardBackgroundColor"
             app:cardCornerRadius="17dp" android:layout_marginTop="5dp" android:layout_marginBottom="5dp"
             android:layout_marginStart="5dp" android:layout_marginEnd="5dp" app:cardElevation="5dp">
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:layout_editor_absoluteX="8dp">
@@ -82,6 +82,6 @@
                     app:layout_constraintStart_toStartOf="@+id/textView8"
                     app:layout_constraintBottom_toTopOf="@+id/textView8" android:textColor="@color/textSuccess"
                     android:textAlignment="center" android:textStyle="bold" android:textSize="18sp"/>
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
