--- a/app/src/main/res/layout/contacts_row.xml
+++ b/app/src/main/res/layout/contacts_row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:background="?android:attr/selectableItemBackground"
@@ -7,7 +7,7 @@
                                              android:focusable="true"
                                              android:layout_width="match_parent"
                                              android:layout_height="50dp">
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:background="?android:attr/selectableItemBackground"
             android:layout_height="match_parent">
@@ -42,5 +42,5 @@
                 app:layout_constraintTop_toBottomOf="@+id/contactTeacherName"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                 android:textSize="10sp" android:textColor="@color/textPrimaryLighterColor"/>
-    </android.support.constraint.ConstraintLayout>
-</android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
