--- a/app/src/main/res/layout/events_row.xml
+++ b/app/src/main/res/layout/events_row.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:background="@color/backgroundColor"
                                              android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_marginTop="5dp"
@@ -14,11 +14,11 @@
             android:layout_marginStart="5dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp" app:layout_constraintBottom_toBottomOf="parent" app:cardElevation="5dp"
             app:cardBackgroundColor="@color/cardBackgroundColor" app:cardCornerRadius="17dp">
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
@@ -26,7 +26,7 @@
                     app:cardBackgroundColor="@color/textDanger" app:cardElevation="4dp"
                     app:cardCornerRadius="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:id="@+id/cardView4">
-                <android.support.constraint.ConstraintLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
@@ -40,8 +40,8 @@
                             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                             app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold"
                             android:textSize="20sp" android:textColor="@android:color/white"/>
-                </android.support.constraint.ConstraintLayout>
-            </android.support.v7.widget.CardView>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
             <TextView
                     android:text="Registrations for 1st year B.Tech student starts"
                     android:layout_width="0dp"
@@ -53,6 +53,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/cardView4" android:textSize="16sp"
                     android:textStyle="bold" android:textColor="@color/textPrimaryColor"
                     android:textAlignment="center"/>
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
