--- a/app/src/main/res/layout/gpa_row.xml
+++ b/app/src/main/res/layout/gpa_row.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:background="@color/backgroundColor"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="110dp"
             android:layout_marginTop="5dp"
@@ -14,7 +14,7 @@
             android:layout_marginEnd="5dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="5dp" app:cardCornerRadius="17dp" app:cardElevation="5dp"
             app:cardBackgroundColor="@color/cardBackgroundColor">
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -35,6 +35,6 @@
                     android:layout_marginEnd="12dp" android:layout_marginBottom="12dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:textSize="20sp" android:textStyle="bold"
                     android:textColor="@color/textDanger"/>
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
