--- a/app/src/main/res/layout/menu_row.xml
+++ b/app/src/main/res/layout/menu_row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
@@ -9,7 +9,7 @@
                                              android:layout_height="180dp">
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -18,7 +18,7 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp" android:layout_marginTop="5dp"
             app:cardBackgroundColor="@color/cardBackgroundColor" app:cardElevation="5dp" app:cardCornerRadius="17dp"
             android:id="@+id/menuCardView">
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -50,6 +50,6 @@
                     android:layout_marginEnd="8dp"
                     android:textStyle="bold" android:textColor="@color/textPrimaryLighterColor"/>
 
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
