--- a/app/src/main/res/layout/results_row.xml
+++ b/app/src/main/res/layout/results_row.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:background="@color/backgroundColor"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="110dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
@@ -13,7 +13,7 @@
             android:layout_marginTop="5dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="5dp"
             app:layout_constraintBottom_toBottomOf="parent" app:cardCornerRadius="17dp" app:cardElevation="5dp"
             app:cardBackgroundColor="@color/cardBackgroundColor">
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -65,6 +65,6 @@
                     app:layout_constraintStart_toStartOf="@+id/textView14"
                     app:layout_constraintBottom_toTopOf="@+id/textView14" android:textSize="18sp"
                     android:textColor="@color/textSuccess" android:textStyle="bold" android:textAlignment="center"/>
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
