--- a/app/src/main/res/layout/activity_contact_info.xml
+++ b/app/src/main/res/layout/activity_contact_info.xml
@@ -83,6 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/cinfoPhone"
+                    android:textIsSelectable="true"
                     app:layout_constraintStart_toEndOf="@+id/imageView5"
                     android:layout_marginStart="16dp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:textStyle="bold"
@@ -92,6 +93,7 @@
                     android:text="someone@somemail.com"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textIsSelectable="true"
                     android:id="@+id/cinfoEmail"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                     app:layout_constraintStart_toEndOf="@+id/imageView6" android:layout_marginStart="16dp"
