--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/button_round"
-        android:text="Complete Login On DMS"
+        android:text="Proceed to captcha"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
